--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>spring-boot-base</module>
         <module>classroomMng</module>
+        <module>tools</module>
     </modules>
 
 
