--- a/classroomMng/src/main/resources/application.properties
+++ b/classroomMng/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://97.64.82.90:3306/classroom_mng_system?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=87550158
-spring.datasource.initialize=false
+spring.datasource.initialize=true
 ################################################[ mysql end]###################################################################
