--- a/classroomMng/pom.xml
+++ b/classroomMng/pom.xml
@@ -12,11 +12,11 @@
     <artifactId>classroomMng</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.hull</groupId>
-            <artifactId>tools</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.hull</groupId>-->
+            <!--<artifactId>tools</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
