--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>classroomMng</module>
         <module>tools</module>
         <module>collegeShop</module>
+        <module>pwdMng</module>
     </modules>
 
 
