--- a/pwdMng/pom.xml
+++ b/pwdMng/pom.xml
@@ -9,14 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>classroomMng</artifactId>
+    <artifactId>pwdMng</artifactId>
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>com.hull</groupId>-->
-            <!--<artifactId>tools</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
