--- a/pwdMng/pom.xml
+++ b/pwdMng/pom.xml
@@ -66,6 +66,12 @@
             <version>1.2.45</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
