--- a/classroomMng/pom.xml
+++ b/classroomMng/pom.xml
@@ -12,11 +12,11 @@
     <artifactId>classroomMng</artifactId>
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>com.hull</groupId>-->
-            <!--<artifactId>tools</artifactId>-->
-            <!--<version>1.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.hull</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -70,6 +70,15 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.45</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
         </dependency>
 
     </dependencies>
